--- a/appz.yml
+++ b/appz.yml
@@ -24,6 +24,15 @@ volumes:
   name: mongo-data
   size: 5Gi
   mode: ReadWriteOnce
+- claim: mongo-data
+  mount: /appz/data
+  name: mongo-data
+  size: 5Gi
+  mode: ReadWriteOnce
+- claim: mongo-key
+  mount: /appz/keys
+  name: key
+  size: 5Gi 
   
 properties:
   DB_USER_ADMIN: admin
