--- a/appz.yml
+++ b/appz.yml
@@ -11,7 +11,7 @@ build:
   image_template: mongo-6.0
   
 deploy:
-  context: nashida2210/dev
+  context: nashida2210/DEV
   type: statefulset
   replicas: 2
   port:
