--- a/appz.yml
+++ b/appz.yml
@@ -13,7 +13,7 @@ build:
 deploy:
   context: nashida2210/DEV
   type: statefulset
-  replicas: 2
+  replicas: 0
   port:
   - 27017
   - 9216
@@ -53,9 +53,9 @@ properties:
     #vault: AWS_SECRET_ACCESS_KEY
   AWS_DEFAULT_REGION: us-east-2
   BACKUPFILE: ksfetest,test
-  REPLICATION: 2
-  MASTER_ENABLE: "yes"
-  AUTH_ENABLE: 1
+  REPLICATION: 0
+  #MASTER_ENABLE: "yes"
+  AUTH_ENABLE: 0
   S3_BUCKET: ksfetestbucket
   
   MONGODB_HOST: 127.0.0.1
