--- a/appz.yml
+++ b/appz.yml
@@ -13,7 +13,7 @@ build:
 deploy:
   context: nashida2210/DEV
   type: statefulset
-  replicas: 3
+  replicas: 2
   port:
   - 27017
   - 9216
@@ -56,8 +56,8 @@ properties:
     #vault: AWS_SECRET_ACCESS_KEY
   AWS_DEFAULT_REGION: us-east-2
   BACKUPFILE: ksfetest,test
-  REPLICATION: 3
-  MASTER_ENABLE: "no"
+  REPLICATION: 2
+  MASTER_ENABLE: "yes"
   AUTH_ENABLE: 1
   S3_BUCKET: ksfetestbucket
   
